// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match Aside component in dark, desk format snapshot 1`] = `
<div>
  <aside
    class="aside aside--desk"
  >
    <div
      class="sort-container sort-container--desk sort-container--dark"
    >
      <label
        class="sort-container__label"
        for="sort-method"
      >
        Sort
      </label>
      <select
        class="sort-container__select sort-container__select--dark"
        id="sort-method"
        name="sort-method"
      >
        <option
          value="none"
        >
          Select...
        </option>
        <option
          value="abv-h2l"
        >
          ABV (highest to lowest)
        </option>
        <option
          value="abv-l2h"
        >
          ABV (lowest to highest)
        </option>
        <option
          value="acid-h2l"
        >
          Acidity (highest to lowest)
        </option>
        <option
          value="acid-l2h"
        >
          Acidity (lowest to highest)
        </option>
      </select>
    </div>
    <div
      class="filter-container filter-container--desk"
    >
      <div
        class="filter-container__container"
      >
        <p
          class="filter-container__label"
        >
          Filter
        </p>
      </div>
      <label
        class="button-label"
        for="abvButton"
      >
        Filter for high ABV only
      </label>
      <button
        class="filter-container__option filter-container__option--dark highABV"
        id="abvButton"
      >
        High ABV (&gt; 6.0%)
        <img
          alt="add filter"
          class="highABV"
          src="add.svg"
        />
      </button>
      <label
        class="button-label"
        for="classicButton"
      >
        Filter for the Classic Range only
      </label>
      <button
        class="filter-container__option filter-container__option--dark classic"
        id="classicButton"
      >
        Classic Range
        <img
          alt="add filter"
          class="classic"
          src="add.svg"
        />
      </button>
      <label
        class="button-label"
        for="phButton"
      >
        Filter for low ph (acidic) only
      </label>
      <button
        class="filter-container__option filter-container__option--dark ph"
        id="phButton"
      >
        Acidic (pH &lt; 4)
        <img
          alt="add filter"
          class="ph"
          src="add.svg"
        />
      </button>
    </div>
  </aside>
</div>
`;

exports[`should match Aside component in dark, mob format snapshot 1`] = `
<div>
  <aside
    class="aside aside--mob"
  >
    <div
      class="sort-container sort-container--mob sort-container--dark"
    >
      <label
        class="sort-container__label"
        for="sort-method"
      >
        Sort
      </label>
      <select
        class="sort-container__select sort-container__select--dark"
        id="sort-method"
        name="sort-method"
      >
        <option
          value="none"
        >
          Select...
        </option>
        <option
          value="abv-h2l"
        >
          ABV (highest to lowest)
        </option>
        <option
          value="abv-l2h"
        >
          ABV (lowest to highest)
        </option>
        <option
          value="acid-h2l"
        >
          Acidity (highest to lowest)
        </option>
        <option
          value="acid-l2h"
        >
          Acidity (lowest to highest)
        </option>
      </select>
    </div>
    <div
      class="filter-container filter-container--mob"
    >
      <div
        class="filter-container__container"
      >
        <p
          class="filter-container__label"
        >
          Filter
        </p>
        <img
          alt="toggle filter menu"
          class="filter-container__arrow"
          src="down-arrow-light.svg"
        />
      </div>
    </div>
  </aside>
</div>
`;

exports[`should match Aside component in light, desk format snapshot 1`] = `
<div>
  <aside
    class="aside aside--desk"
  >
    <div
      class="sort-container sort-container--desk"
    >
      <label
        class="sort-container__label"
        for="sort-method"
      >
        Sort
      </label>
      <select
        class="sort-container__select"
        id="sort-method"
        name="sort-method"
      >
        <option
          value="none"
        >
          Select...
        </option>
        <option
          value="abv-h2l"
        >
          ABV (highest to lowest)
        </option>
        <option
          value="abv-l2h"
        >
          ABV (lowest to highest)
        </option>
        <option
          value="acid-h2l"
        >
          Acidity (highest to lowest)
        </option>
        <option
          value="acid-l2h"
        >
          Acidity (lowest to highest)
        </option>
      </select>
    </div>
    <div
      class="filter-container filter-container--desk"
    >
      <div
        class="filter-container__container"
      >
        <p
          class="filter-container__label"
        >
          Filter
        </p>
      </div>
      <label
        class="button-label"
        for="abvButton"
      >
        Filter for high ABV only
      </label>
      <button
        class="filter-container__option highABV"
        id="abvButton"
      >
        High ABV (&gt; 6.0%)
        <img
          alt="add filter"
          class="highABV"
          src="add.svg"
        />
      </button>
      <label
        class="button-label"
        for="classicButton"
      >
        Filter for the Classic Range only
      </label>
      <button
        class="filter-container__option classic"
        id="classicButton"
      >
        Classic Range
        <img
          alt="add filter"
          class="classic"
          src="add.svg"
        />
      </button>
      <label
        class="button-label"
        for="phButton"
      >
        Filter for low ph (acidic) only
      </label>
      <button
        class="filter-container__option ph"
        id="phButton"
      >
        Acidic (pH &lt; 4)
        <img
          alt="add filter"
          class="ph"
          src="add.svg"
        />
      </button>
    </div>
  </aside>
</div>
`;

exports[`should match Aside component in light, mob format snapshot 1`] = `
<div>
  <aside
    class="aside aside--mob"
  >
    <div
      class="sort-container sort-container--mob"
    >
      <label
        class="sort-container__label"
        for="sort-method"
      >
        Sort
      </label>
      <select
        class="sort-container__select"
        id="sort-method"
        name="sort-method"
      >
        <option
          value="none"
        >
          Select...
        </option>
        <option
          value="abv-h2l"
        >
          ABV (highest to lowest)
        </option>
        <option
          value="abv-l2h"
        >
          ABV (lowest to highest)
        </option>
        <option
          value="acid-h2l"
        >
          Acidity (highest to lowest)
        </option>
        <option
          value="acid-l2h"
        >
          Acidity (lowest to highest)
        </option>
      </select>
    </div>
    <div
      class="filter-container filter-container--mob"
    >
      <div
        class="filter-container__container"
      >
        <p
          class="filter-container__label"
        >
          Filter
        </p>
        <img
          alt="toggle filter menu"
          class="filter-container__arrow"
          src="down-arrow.svg"
        />
      </div>
    </div>
  </aside>
</div>
`;
